--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
+    "@types/leaflet": "^1.9.8",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
